# teste-mobile

./: .gitignore  CMakeLists.txt  CONTRACT.md  LICENSE  README.md  cli.cpp  omr.cpp  omr.h
.github/workflows/: android.yml  ci.yml  ios.yml
android/: build.sh
android/demo-app/: README.md  bootstrap.sh  settings.gradle.kts
android/demo-app/app/: build.gradle.kts  proguard-rules.pro
android/demo-app/app/src/main/: AndroidManifest.xml
android/demo-app/app/src/main/assets/: template-01-celular-lampada.json
android/demo-app/app/src/main/java/br/com/testemobile/omr/: MainActivity.kt  OmrNative.kt
android/demo-app/app/src/main/res/layout/: activity_main.xml
android/demo-app/app/src/main/res/values/: strings.xml  themes.xml
android/jni/: OmrJni.cpp
android/scripts/: build-libomp.sh
benchmark/: benchmark.py  build_templates.py  mark_all.py  mark_bubbles.py  perturb.py  run_validation.py
benchmark/detectors/: base.py  cpp_omr.py  cpp_stub.py  omrchecker.py
benchmark/inputs/10q-4alt-1col-med/: answer-key.json  config.json  template.json
benchmark/inputs/20q-4alt-2col-med/: answer-key.json  template.json
benchmark/inputs/20q-5alt-2col-med/: answer-key.json  template.json
benchmark/inputs/30q-5alt-2col-lg/: answer-key.json  template.json
benchmark/inputs/30q-5alt-2col-med/: template.json
benchmark/inputs/30q-5alt-2col-med-perturbed/: config.json  template.json
benchmark/inputs/30q-5alt-2col-sm/: template.json
benchmark/inputs/50q-5alt-3col-med/: answer-key.json  template.json
ios/: build-ios.sh
